--- a/sample17/index.html
+++ b/sample17/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,5 +12,5 @@
     <button id="checkBtn">Check</button>
     <script src="/app.js"></script>
 </body>
-</html> -->
+</html> 
 
